# LilyTerm

./: .default  .gitignore  AUTHORS  ChangeLog  Makefile  README  TODO  autogen.sh  configure  configure.ac
data/: Makefile  Makefile.am  lilyterm.1  lilyterm.conf  lilyterm.desktop  lilyterm.xml  lilyterm.xpm
po/: Makefile  POTFILES.in  de.po  es.po  fr.po  it.po  lilyterm.pot  missing  nl.po  pl.po  pt_BR.po  ru.po  sk.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: Makefile  Makefile.am  console.c  console.h  data.h  dialog.c  dialog.h  font.c  font.h  lilyterm.h  main.c  main.h  menu.c  menu.h  misc.c  misc.h  notebook.c  notebook.h  pagename.c  pagename.h  profile.c  profile.h  property.c  property.h  socket.c  socket.h  unit_test.sh  window.c  window.h
